--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ box-shadow: 5px 5px 10px solid black;
 /* media query */
 @media only screen and (max-width: 600px) {
     p {
-       font-size: 10px;
+       font-size: 11px !important;
     }
 
     
@@ -55,7 +55,7 @@ box-shadow: 5px 5px 10px solid black;
 
 .maindiv_2{
     margin: 0px !important;
-    height: 200px;
+    height: 300px !important;
     width: 150px !important ;
     background: rgba(48, 176, 249, 0.95);
     border-radius: 18px;
